# apex-quant

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SESSION_PLAYBOOK.md  TASKS.md  VISION.md  WORKLOAD.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  strategy_proposal.yml
.github/workflows/: ci.yml  pages.yml  trade.yml  watchdog.yml
apex/analytics/: __init__.py  benchmark_comparison.py  contribution_analysis.py  drawdown_table.py  equity_curve.py  monthly_returns_table.py  performance_summary.py  return_distribution.py  rolling_beta.py  rolling_correlation.py  sleeve_attribution.py  trade_analyzer.py  underwater_curve.py  win_loss_analysis.py
apex/backtest/: __init__.py  allocator.py  backtester.py  gauntlet_runner.py  synthetic.py
apex/core/: __init__.py  clock.py  config.py  event_bus.py  events.py  models.py  option.py
apex/data/: alpaca_crypto_feed.py  alpaca_feed.py  alpaca_options_feed.py  anchored_vwap.py  base_feed.py  corporate_actions.py  dollar_volume_bars.py  frequency_inference.py  historical_feed.py  normalizer.py  ohlc_consistency.py  outlier_filter.py  quality.py  resample.py  returns_aggregator.py  returns_builder.py  rolling_zscore.py  spread_estimator.py  synthetic_bars.py  trading_calendar.py  winsorize.py
apex/execution/: alpaca.py  alpaca_crypto.py  alpaca_options.py  base_execution.py  engine.py  factory.py  simulated.py  stateful_sim.py
apex/ops/: __init__.py  alerts.py  heartbeat.py
apex/risk/: beta_hedge.py  capital_allocation.py  concentration_metrics.py  correlation_matrix.py  drawdown_throttle.py  erc_weights.py  exposure_report.py  leverage_metrics.py  liquidity_caps.py  portfolio.py  position_sizing.py  risk_manager.py  stop_levels.py  trade_risk_reward.py  var_limit_check.py
apex/strategy/: base_strategy.py  ind_adx.py  ind_aroon.py  ind_cci.py  ind_chaikin_money_flow.py  ind_choppiness_index.py  ind_coppock_curve.py  ind_dema_tema.py  ind_donchian_channels.py  ind_elder_ray.py  ind_fisher_transform.py  ind_hull_moving_average.py  ind_kama.py  ind_keltner_channels.py  ind_mfi.py  ind_obv.py  ind_parabolic_sar.py  ind_roc.py  ind_standard_error_bands.py  ind_stochastic.py  ind_supertrend.py  ind_trix.py  ind_ultimate_oscillator.py  ind_vortex.py  ind_williams_r.py  ind_zlema.py  indicators.py  regime.py  weighting.py
apex/validation/: __init__.py  autocorrelation.py  benchmark.py  block_bootstrap.py  bootstrap_ci.py  cagr_mar.py  capacity_estimate.py  cost_model.py  deflated_sharpe.py  drawdown_analysis.py  drift_monitor.py  gauntlet.py  hit_rate_stats.py  hurst_exponent.py  information_coefficient.py  kelly_criterion.py  metrics.py  monte_carlo.py  omega_ratio.py  overfitting.py  pbo.py  permutation.py  regime_split_metrics.py  rolling_sharpe.py  skew_kurtosis.py  t_test_returns.py  tail_ratio.py  turnover_metrics.py  ulcer_index.py  var_cvar.py  variance_ratio_test.py  walk_forward.py
docs/: HOSTING.md  LONG_SHORT_DESIGN.md  ROADMAP-PERPETUAL.md  ROADMAP-STRATEGIC.md  STRATEGY_PLAYBOOK.md  VALIDATION_GAUNTLET.md
research/: TS_MOMENTUM_FINDINGS.md  ts_momentum_study.py
research/govcon/: FINDINGS.md  capturability.py  event_study.py  universe.py
scripts/: __init__.py  ab_trend_craft.py  alerts_preview.py  allocate.py  backtest_grid.py  check.ps1  check.sh  compare_strategies.py  config_audit.py  dashboard.py  export_status.py  fetch_yahoo.py  health.py  monthly_report.py  perf_report.py  plot_equity.py  portfolio.py  preflight.py  regime_report.py  report.py  returns_csv.py  risk_dashboard.py  run_backtest.py  run_experiments.py  run_once.py  screener_yahoo.py  sleeve_screen.py  status.py  survivorship_stress.py  temporal_robustness.py  trade_log_export.py  universe_robustness.py  validate_real.py  validate_sweep.py  value_vs_trend.py  webapp.py
state/: apex_state.db  status.json
tests/: __init__.py  test_alerts.py  test_alerts_preview.py  test_allocate.py  test_allocator.py  test_alpaca_crypto.py  test_alpaca_crypto_feed.py  test_alpaca_execution.py  test_alpaca_feed.py  test_alpaca_options.py  test_alpaca_options_feed.py  test_anchored_vwap.py  test_architecture_fitness.py  test_atr_channel_breakout.py  test_audit_regressions.py  test_autocorrelation.py  test_backtest_grid.py  test_backtester.py  test_base_strategy.py  test_benchmark.py  test_benchmark_comparison.py  test_beta_hedge.py  test_block_bootstrap.py  test_bollinger_breakout.py  test_bond_carry.py  test_bootstrap_ci.py  test_breadth_momentum.py  test_cagr_mar.py  test_capacity_estimate.py  test_capital_allocation.py  test_compare_strategies.py  test_concentration_metrics.py  test_config.py  test_config_audit.py  test_connors_rsi_strategy.py  test_contribution_analysis.py  test_core.py  test_corporate_actions.py  test_correlation_matrix.py  test_cost_model.py  (+144 more)
(+6 files in other folders)
