[project]
name = "apex-quant"
version = "0.1.0"
description = "Event-driven, asset-agnostic algorithmic trading framework with immutable risk guardrails"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Error-focused: catch real bugs (undefined names, unused imports, import order)
# and keep CI green and meaningful. The opinionated modernization/naming/bugbear
# sets (UP/N/B) are deferred — the codebase predates them and a 500-site rewrite
# to satisfy style rules isn't worth the churn/risk on a live trading engine.
# Re-add "UP", "N", "B" and run `ruff check --fix` as a dedicated cleanup when ready.
select = ["E", "F", "I", "W"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false   # tighten over time
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage is wired in here so a bare `pytest` (locally and in CI) measures it.
# --cov-fail-under is the regression floor: the build fails if coverage drops
# below it. The floor is set CONSERVATIVELY at 70% because the exact current
# coverage could not be measured in this environment (no local interpreter).
# The suite is large (336+ tests) and almost certainly well above this; once a
# real CI run reports the true number, RAISE this floor to ~5 points below it
# so it ratchets up and can't silently regress.
addopts = "-v --tb=short --cov=apex --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["apex"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
