[project]
name = "apex-quant"
version = "0.1.0"
description = "Event-driven, asset-agnostic algorithmic trading framework with immutable risk guardrails"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Error-focused: catch real bugs (undefined names, unused imports, import order)
# and keep CI green and meaningful. The opinionated modernization/naming/bugbear
# sets (UP/N/B) are deferred — the codebase predates them and a 500-site rewrite
# to satisfy style rules isn't worth the churn/risk on a live trading engine.
# Re-add "UP", "N", "B" and run `ruff check --fix` as a dedicated cleanup when ready.
select = ["E", "F", "I", "W"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false   # tighten over time
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage is wired in here so a bare `pytest` (locally and in CI) measures it.
# --cov-fail-under is the regression floor: the build fails if coverage drops
# below it. Measured baseline 2026-06-08: 94.52% across ~3056 tests / 151+ files.
# Floor ratcheted to 90 (~4.5 pts below measured) so a real regression trips CI
# instead of silently bleeding ~24 points under the old conservative 70% placeholder.
# Keep ratcheting toward ~5 pts below actual as coverage rises.
addopts = "-v --tb=short --cov=apex --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["apex"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
